--- a/tools/html/styling/styling.html
+++ b/tools/html/styling/styling.html
@@ -10,25 +10,29 @@
             margin: 0;
         }
 
+        body {
+            background-color: rgba(0,0,0,1);
+        }
+
         body > main > section#actions-buttons > button {
-            background-color: rgba(175,0,0,1);
-            border: solid 2px rgba(100,100,100,1);
-            border-radius: 5px;
+            background-color: rgba(255,0,0,0);
+            border: solid 2px rgba(255,0,0,1);
             width: 200px;
             height: 40px;
             cursor: pointer;
-            box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 1) inset;
+            box-shadow: 0px 0px 10px 1px rgba(255,0,0,0) inset;
             display: block;
         }
         
         body > main > section#actions-buttons > button.hover {
-            background-color: rgba(225,0,0,1);
+            background-color: rgba(255,0,0,0.5);
         }
         body > main > section#actions-buttons > button.pressed {
-            background-color: rgba(255,0,0,1);
-            box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 1) inset;
+            background-color: rgba(200,0,0,1);
+            box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0) inset;
         }
         body > main > section#actions-buttons > button.disabled {
+            border: solid 2px rgba(100,100,100,1);
             background-color: rgba(175,175,175,1);
             box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5) inset;
         }
@@ -40,7 +44,7 @@
             width: 40px;
             height: 40px;
             background: rgba(0,0,0,1);
-            border: solid 3px rgba(100,100,100,1);
+            border: solid 2px rgba(255,0,0,1);
             box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 1) inset;
         }
         body > main > section#genders button.hover {
